name:                servant-rawm
version:             0.4.0.0
synopsis:            Embed a raw 'Application' in a Servant API
description:
  Please see <https://github.com/cdepillabout/servant-rawm#readme README.md>.
  .
  After @servant-rawm@ 0.4.0.0, it is recommended to import sub-packages
  @servant-rawm-api@, @servant-rawm-server@, @servant-rawm-client@, and
  @servant-rawm-docs@ instead of this package to avoid pulling in unnecessary
  dependencies. This can reduce the compilation time dramatically.
homepage:            https://github.com/cdepillabout/servant-rawm
license:             BSD3
license-file:        LICENSE
author:              Dennis Gosnell
maintainer:          cdep.illabout@gmail.com
copyright:           2017 Dennis Gosnell
category:            Servant
                   , Web
build-type:          Simple
extra-source-files:  CHANGELOG.md
                   , README.md
                   , example/files/bar.txt
                   , example/files/foo.txt
                   , stack.yaml
cabal-version:       >=1.10

flag buildexample
  description: Build a small example program
  default: False

library
  hs-source-dirs:      src
  exposed-modules:     Servant.RawM
  build-depends:       base >= 4.9 && < 5
                     , servant-rawm-api
                     , servant-rawm-client
                     , servant-rawm-docs
                     , servant-rawm-server
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -Wmissing-import-lists

executable servant-rawm-example-client
  main-is:             Client.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base >= 4.11 && < 5
                     , bytestring
                     , http-client
                     , http-media
                     , http-types
                     , servant
                     , servant-rawm-api
                     , servant-rawm-client
                     , servant-client
                     , servant-client-core
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -Wmissing-import-lists -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

executable servant-rawm-example-docs
  main-is:             Docs.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base >= 4.11 && < 5
                     , servant
                     , servant-rawm-api
                     , servant-rawm-docs
                     , servant-docs
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -Wmissing-import-lists -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

executable servant-rawm-example-server
  main-is:             Server.hs
  other-modules:       Api
  hs-source-dirs:      example
  build-depends:       base >= 4.11 && < 5
                     , servant
                     , servant-rawm-api
                     , servant-rawm-server
                     , servant-server
                     , transformers
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -Wmissing-import-lists -threaded -rtsopts -with-rtsopts=-N

  if flag(buildexample)
    buildable:         True
  else
    buildable:         False

test-suite servant-rawm-doctest
  type:                exitcode-stdio-1.0
  main-is:             DocTest.hs
  hs-source-dirs:      test
  build-depends:       base
                     , doctest
                     , Glob
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N

test-suite servant-rawm-test
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  other-modules:
  hs-source-dirs:      test
  build-depends:       base >= 4.11 && < 5
                     , bytestring
                     , filepath
                     , hspec-wai
                     , http-client
                     , http-media
                     , http-types
                     , resourcet
                     , servant
                     , servant-client
                     , servant-client-core
                     , servant-docs
                     , servant-rawm
                     , lens
                     , servant-server
                     , tasty
                     , tasty-hspec >= 0.2
                     , tasty-hunit
                     , text
                     , transformers
                     , wai
                     , wai-app-static
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N -fwarn-incomplete-uni-patterns -fwarn-incomplete-record-updates -fwarn-monomorphism-restriction -Wmissing-import-lists

source-repository head
  type:     git
  location: git@github.com:cdepillabout/servant-rawm.git
